Rewrite README.md following PurpleBooth "good template".